# qa-auto-engineer-python-project-49

./: README.md  demo.cast  makefile  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py
security/: engine.py
