[project]
name = "hexlet-code"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1"
]

[build-system]                                                                                                               
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["brain_games"] 

[dependency-groups]
dev = [
    "makefile>=1.1.0",
    "ruff>=0.15.7",
]


[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"



