[project]
name = "hexlet-code"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1"
]

[build-system]                                                                                                               
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["brain_games", "games", "security"]

[dependency-groups]
dev = [
    "makefile>=1.1.0",
    "ruff>=0.15.7",
]


[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"



